# rtype

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  Doxyfile  Doxyfile   README.md  RUN_ME.bat  RUN_ME.ps1  RUN_ME.sh  client_config.toml  main-page.dox  make.sh
bonus/side_scripts/client/shared_sf_font/: CMakeLists.txt
client/lib/: CMakeLists.txt
client/lib/asio/: CMakeLists.txt
game_source/: CMakeLists.txt
game_source/ECS/: ComponentContainer.cpp  ComponentContainer.hpp  DenseArray.cpp  DenseArray.hpp  Entity.cpp  Entity.hpp  IndexedZipper.cpp  IndexedZipper.hpp  IndexedZipperIterator.cpp  IndexedZipperIterator.hpp  Random.cpp  Registry.cpp  Registry.hpp  SparseArray.cpp  SparseArray.hpp  Time.cpp  Zipper.cpp  Zipper.hpp  ZipperIterator.cpp  ZipperIterator.hpp
game_source/ECS/include/: ComponentContainer.hpp  DenseArray.hpp  Entity.hpp  IndexedZipper.hpp  IndexedZipperIterator.hpp  Random.hpp  Registry.hpp  SparseArray.hpp  Time.hpp  Zipper.hpp  ZipperIterator.hpp
game_source/components/: Behaviour.hpp  Collider.hpp  Components.hpp  Health.hpp  Image.hpp  Lifetime.hpp  LootDrop.hpp  PlayerInfo.hpp  Position.hpp  PowerUp.hpp  Team.hpp  Type.hpp  Velocity.hpp  Weapon.hpp
game_source/engine/: Game.hpp  GameObject.cpp  GameObject.hpp  IInput.hpp  IRenderable.hpp  Input.hpp  InputManager.cpp  InputManager.hpp  Scene.cpp  Scene.hpp
game_source/manager/: Game.cpp  GameMessage.cpp  Queue.cpp  Time.cpp
game_source/manager/include/: EventDispatcher.hpp  Game.hpp  GameMessage.hpp  Queue.hpp  Time.hpp
game_source/scripts/allies/: Ally.cpp  Ally.hpp  Player.cpp  Player.hpp
game_source/scripts/interfaces/: Droppable.hpp  IDroppable.hpp  IPickable.hpp  Pickable.hpp
game_source/scripts/missiles/: AllyMissile.cpp  AllyMissile.hpp  EnemyMissile.cpp  EnemyMissile.hpp  Missile.hpp  PlayerMissile.cpp  PlayerMissile.hpp
game_source/scripts/monsters/: DroppableMonster.cpp  DroppableMonster.hpp  Monster.cpp  Monster.hpp
game_source/scripts/obstacles/: DestroyableObstacle.cpp  DestroyableObstacle.hpp  Obstacle.cpp  Obstacle.hpp
game_source/scripts/powerups/: HealthPack.cpp  HealthPack.hpp  PowerUp.cpp  PowerUp.hpp
game_source/systems/: AISystem.cpp  AISystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EventSystem.cpp  LifetimeSystem.cpp  LifetimeSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PlayerMiscellaneous.cpp  SpawnSystem.cpp  SpawnSystem.hpp  SyncingSystem.cpp  Systems.cpp  WeaponSystem.cpp  WeaponSystem.hpp  WinSystem.cpp
game_source/systems/include/: AISystem.hpp  CollisionSystem.hpp  EventSystem.hpp  LifetimeSystem.hpp  MovementSystem.hpp  PlayerMiscellaneous.hpp  SpawnSystem.hpp  SyncingSystem.hpp  Systems.hpp  WeaponSystem.hpp  WinSystem.hpp
game_source/tests/: Tests.cpp  main.cpp
game_source/tests/include/: Tests.hpp
gui/: .gitignore  CMakeLists.txt  client_config.toml  compile_and_run.sh  config.toml
gui/include/: ActiveScreen.hpp  Constants.hpp  CustomExceptions.hpp  Debug.hpp  ExceptionHandling.hpp  GUI.hpp  Log.hpp  LogMacros.hpp  MyRecodes.hpp  RealMain.hpp  Recoded.hpp  SoundLib.hpp  TOMLLoader.hpp  Utilities.hpp
gui/include/CustomExceptions/: Failed.hpp  Found.hpp  Invalid.hpp  No.hpp  NotFound.hpp  NotInitialised.hpp  Unknown.hpp
gui/include/GUI/: BaseComponents.hpp  ECS.hpp  Enums.hpp  Factory.hpp  Input.hpp  Interfaces.hpp  ItemCreator.hpp  Main.hpp  Network.hpp  UIComponents.hpp  Utilities.hpp
gui/include/GUI/BaseComponents/: Animation.hpp  Image.hpp  Music.hpp  Shape.hpp  Sprite.hpp  (+1 more)
gui/include/MyRecodes/: Rect.hpp  ToString.hpp
gui/include/Recoded/: Rect.hpp  ToString.hpp
gui/include/Utilities/: OperatorRebind.hpp  UnCast.hpp  unCast.hpp
gui/lib/: CMakeLists.txt
gui/lib/SFML/: CMakeLists.txt
gui/lib/asio/: CMakeLists.txt
gui/lib/toml/: CMakeLists.txt
gui/src/: Debug.cpp  ExceptionHandling.cpp  HelpFunctions.cpp  Log.cpp  Main.cpp  MainClass.cpp  RealMain.cpp  SoundLib.cpp  TOMLLoader.cpp  main.cpp
gui/src/CustomExceptions/: Failed.cpp  Found.cpp  Invalid.cpp  No.cpp  NotFound.cpp  NotInitialised.cpp  Unknown.cpp
gui/src/MyRecodes/: Rect.cpp  ToString.cpp
gui/src/Recoded/: Rect.cpp  ToString.cpp
new_project/client/: CMakeLists.txt
new_project/client/include/: Client.hpp  Entity.hpp  EntityManager.hpp  HUD.hpp  HandleBackground.hpp  HandleSprites.hpp  MusicHandler.hpp  NetworkClient.hpp  ParallaxBackground.hpp  SpriteEntity.hpp  TextureManager.hpp
new_project/client/src/: Client.cpp  EntityManager.cpp  HUD.cpp  HandleBackground.cpp  HandleSprites.cpp  MusicHandler.cpp  NetworkClient.cpp  ParallaxBackground.cpp  SpriteEntity.cpp  TextureManager.cpp  main.cpp
new_project/common/: CMakeLists.txt  NetworkProtocol.cpp  NetworkProtocol.hpp
new_project/server/: CMakeLists.txt
new_project/server/include/: Entity.hpp  GameWorld.hpp  Missile.hpp  Monster.hpp  NetworkManager.hpp  Player.hpp  Server.hpp
new_project/server/src/: Entity.cpp  GameWorld.cpp  Missile.cpp  Monster.cpp  NetworkManager.cpp  Player.cpp  Server.cpp  connect.txt  main.cpp  player_position.txt  spawn_monster.txt
server/: CMakeLists.txt  README.md  main.cpp
server/docs/Protocol/: UDP Protocol Documentation.md
server/include/: Entity.hpp  GameWorld.hpp  Missile.hpp  Monster.hpp  NetworkManager.hpp  Player.hpp  Server.hpp
server/lib/: CMakeLists.txt
server/lib/asio/: CMakeLists.txt
server/lib/toml/: CMakeLists.txt
server/src/: Entity.cpp  GameManager.cpp  GameWorld.cpp  Missile.cpp  Monster.cpp  NetworkManager.cpp  Player.cpp  ProtocolHandler.cpp  Server.cpp  ThreadPool.cpp  asio_hash.hpp  client_manager.cpp  client_manager.hpp  game_manager.cpp  game_manager.hpp  logic_manager.cpp  logic_manager.hpp  main.cpp  message.hpp  message_codec.cpp  message_codec.hpp  server.cpp  server.hpp
server/src/includes/: GameManager.hpp  IServer.hpp  NetworkManager.hpp  ProtocolHandler.hpp  Server.hpp  ServerFactory.hpp  ThreadPool.hpp
src/: CMakeLists.txt
src/server/: GameManager.cpp  NetworkManager.cpp  Server.cpp  main.cpp
src/server/includes/: NetworkManager.hpp  ProtocolHandler.hpp
(+5927 files in other folders)
